# pydiso

./: .bumpversion.cfg  .coveragerc  .gitattributes  .gitignore  README.md  meson.build  meson.options  pardiso_solver.pyx  pyproject.toml  setup.py  test.py
.github/workflows/: python-package-conda.yml  release.yml
pydiso/: __init__.py  _mkl_solver.pyx.in  meson.build  mkl_solver.c  mkl_solver.py  mkl_solver.pyx  setup.py
tests/: test.py  test_pydiso.py
